# fundere

./: .gitignore  CITATION.cff  Cargo.toml  build.rs  config-sample.kdl  fundere-manifest.rc  fundere.exe.manifest  release.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
migrations/: 000_base.sql  001_sprints.sql  002_errors.sql  003_nanowrimo.sql  004_projects.sql  005_nano_dont_ask_me.sql  006_trackbear_migration.sql  007_rename_nano_id_to_trackbear_id.sql  008_drop_project_goals.sql  009_user_preferences.sql  20221001172001_initial.down.sql  20221001172001_initial.up.sql
src/: bot.rs  config.rs  db.rs  error_ext.rs  main.rs  nano.rs  nominare.rs  sprint.rs  trackbear.rs
src/bot/: action.rs  calc.rs  choose.rs  context.rs  debug.rs  names.rs  nanowrimo.rs  parsers.rs  random.rs  related.rs  sprint.rs  timezone.rs  trackbear.rs  utils.rs  words.rs
src/bot/action/: calc_result.rs  command_ack.rs  command_error.rs  component_ack.rs  nanowrimo_login_confirm.rs  nanowrimo_login_modal.rs  sprint_announce.rs  sprint_cancelled.rs  sprint_end.rs  sprint_end_warning.rs  sprint_joined.rs  sprint_left.rs  sprint_save_words.rs  sprint_start.rs  sprint_start_warning.rs  sprint_summary.rs  sprint_update.rs  sprint_warning.rs  sprint_words_end.rs  sprint_words_start.rs  timezone_modal.rs  timezone_show.rs  trackbear_login_confirm.rs  trackbear_login_modal.rs
src/bot/parsers/: command.rs
src/bot/random/: cards.rs  colours.rs
src/bot/utils/: command.rs  pretties.rs  time.rs
src/db/: channel.rs  error.rs  member.rs  message.rs  migrate.rs  nanowrimo_login.rs  project.rs  sprint.rs  trackbear_login.rs  types.rs  user_preference.rs
src/nano/: goal.rs  project.rs
src/trackbear/: client.rs  project.rs
