[package]
name = "fundere"
version = "0.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Yet Another Implementation of Sass"
publish = false

edition = "2021"
resolver = "2"
rust-version = "1.60.0"

exclude = ["/.github"]

[dependencies]
chrono = "0.4.22"
chrono-tz = "0.6.3"
clap = { version = "4.0.7", features = ["derive", "cargo"] }
fend-core = "1.1.1"
futures-util = "0.3.24"
humantime = "2.1.0"
itertools = "0.10.5"
knuffel = "2.0.0"
miette = { version = "4.7.1", features = ["fancy"] }
pg_interval = "0.4.1"
postgres-types = { version = "0.2.4", features = ["derive", "with-uuid-1", "array-impls", "with-chrono-0_4"] }
tokio = { version = "1.21.1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["array-impls", "with-chrono-0_4", "with-uuid-1"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
twilight-cache-inmemory = { version = "0.13.0", features = ["permission-calculator"] }
twilight-gateway = { version = "0.13.2", features = ["simd-json"] }
twilight-http = { version = "0.13.2", features = ["simd-json", "trust-dns"] }
twilight-mention = "0.13.0"
twilight-model = "0.13.4"
twilight-standby = "0.13.1"
twilight-util = { version = "0.13.2", features = ["permission-calculator", "builder", "link"] }
uuid = { version = "1.1.2", features = ["v4"] }
