[package]
name = "fundere"
version = "0.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Yet Another Implementation of Sass"
publish = false

edition = "2021"
resolver = "2"
rust-version = "1.60.0"

exclude = ["/.github"]

[dependencies]
chrono = "0.4.22"
chrono-tz = "0.8.0"
clap = { version = "4.0.27", features = ["derive", "cargo"] }
fend-core = "1.1.1"
futures-util = "0.3.24"
humantime = "2.1.0"
itertools = "0.10.5"
knuffel = "2.0.0"
miette = { version = "4.7.1", features = ["fancy"] }
pg_interval = "0.4.1"
postgres-types = { version = "0.2.4", features = ["derive", "with-uuid-1", "array-impls", "with-chrono-0_4"] }
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json", "gzip", "serde_json", "brotli", "deflate", "trust-dns"] }
secret-vault-value = "0.3.7"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["array-impls", "with-chrono-0_4", "with-uuid-1"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twilight-cache-inmemory = { version = "0.14.0", features = ["permission-calculator"] }
twilight-gateway = { version = "0.14.0" }
twilight-http = { version = "0.14.0", features = ["trust-dns"] }
twilight-mention = "0.14.0"
twilight-model = "0.14.0"
twilight-standby = "0.14.0"
twilight-util = { version = "0.14.0", features = ["permission-calculator", "builder", "link"] }
url = "2.4.0"
uuid = { version = "1.2.1", features = ["v4"] }


[dependencies.nanowrimo]
version = "0.3.0"
git = "https://github.com/passcod/nanowrimo-rs"
#path = "../nanowrimo-rs"

[profile.release]
lto = true
strip = "debuginfo"
